[gd_scene load_steps=34 format=2]

[ext_resource path="res://Textures/SecondBoss/Hand.png" type="Texture" id=1]
[ext_resource path="res://Textures/SecondBoss/BG.png" type="Texture" id=2]
[ext_resource path="res://default_env.tres" type="Environment" id=3]
[ext_resource path="res://Textures/HUD/InventorySlot.png" type="Texture" id=4]
[ext_resource path="res://Textures/HUD/Rings.png" type="Texture" id=5]
[ext_resource path="res://Textures/HUD/Inventory.jpg" type="Texture" id=6]
[ext_resource path="res://Textures/HUD/Progress.png" type="Texture" id=7]
[ext_resource path="res://Maps/SpecialBoss/NewPlayer.gd" type="Script" id=8]
[ext_resource path="res://HUD/BWTheme.tres" type="Theme" id=9]
[ext_resource path="res://Textures/HUD/crosshair.png" type="Texture" id=10]
[ext_resource path="res://PlayerSoundBank.gd" type="Script" id=11]
[ext_resource path="res://Assets/Music/Panic.ogg" type="AudioStream" id=12]
[ext_resource path="res://Textures/Title/OpeningBG.png" type="Texture" id=13]
[ext_resource path="res://Maps/SpecialBoss/PlayerTimer.gd" type="Script" id=14]
[ext_resource path="res://Textures/Boss/Ship1.png" type="Texture" id=15]
[ext_resource path="res://Maps/SpecialBoss/Eggsman.gd" type="Script" id=16]
[ext_resource path="res://Assets/Sounds/Oof.ogg" type="AudioStream" id=17]
[ext_resource path="res://Assets/Music/Final.ogg" type="AudioStream" id=18]
[ext_resource path="res://Maps/SpecialBoss/RingMover.gd" type="Script" id=19]
[ext_resource path="res://HUD/ThemeBig.tres" type="Theme" id=20]
[ext_resource path="res://Textures/PreBossCutscene/BG2.png" type="Texture" id=21]
[ext_resource path="res://HUD/Button.tres" type="Theme" id=22]

[sub_resource type="Animation" id=2]
resource_name = "Move"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Hand:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1418, 655 ), Vector2( 1418, 700 ), Vector2( 1418, 655 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hand:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1418, 655 ) ]
}

[sub_resource type="CapsuleShape" id=1]
radius = 0.544329
height = 0.576445

[sub_resource type="SphereShape" id=5]
radius = 4.0

[sub_resource type="QuadMesh" id=6]
size = Vector2( 6, 6 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_texture = ExtResource( 15 )

[sub_resource type="SphereMesh" id=8]
flip_faces = true
radius = 30.0
height = 60.0

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
albedo_texture = ExtResource( 2 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 20, 1, 20 )

[sub_resource type="CubeMesh" id=11]
size = Vector3( 40, 2, 40 )

[sub_resource type="SpatialMaterial" id=12]
flags_unshaded = true
albedo_texture = ExtResource( 2 )

[node name="SpecialBoss" type="Spatial"]

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="TextureRect" parent="HUD"]
margin_left = 1418.0
margin_top = 655.0
margin_right = 1930.0
margin_bottom = 1167.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftHUD" type="TextureRect" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -120.0
margin_right = 1036.0
margin_bottom = -6.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 0, 141 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rings" type="TextureRect" parent="HUD/LeftHUD"]
margin_left = 22.6667
margin_top = 16.9999
margin_right = 439.667
margin_bottom = 56.9999
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthAmount" type="Label" parent="HUD/LeftHUD/Rings"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -113.333
margin_top = -37.5
margin_right = -9.33344
margin_bottom = 37.5
theme = ExtResource( 9 )
text = "100"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RingsLabel" type="Label" parent="HUD/LeftHUD/Rings"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 69.3333
margin_top = -37.6667
margin_right = 152.333
margin_bottom = 37.3333
theme = ExtResource( 9 )
text = "RINGS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RingsIcon" type="TextureRect" parent="HUD/LeftHUD/Rings"]
margin_right = 64.0
margin_bottom = 40.0
texture = ExtResource( 5 )
expand = true

[node name="Weapon" type="Control" parent="HUD/LeftHUD"]
margin_left = 900.0
margin_top = 5.0
margin_right = 996.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="HUD/LeftHUD/Weapon"]
modulate = Color( 0.196078, 0.27451, 0.243137, 1 )
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="HUD/LeftHUD/Weapon"]
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Crosshair" type="TextureRect" parent="HUD"]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
autoplay = "Move"
anims/Move = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="PlayerSoundBank" type="Spatial" parent="." groups=["PlayerSound"]]
script = ExtResource( 11 )

[node name="Player1" type="AudioStreamPlayer" parent="PlayerSoundBank"]

[node name="Player2" type="AudioStreamPlayer" parent="PlayerSoundBank"]

[node name="Player3" type="AudioStreamPlayer" parent="PlayerSoundBank"]

[node name="RingStream" type="AudioStreamPlayer" parent="PlayerSoundBank"]

[node name="WeaponStream" type="AudioStreamPlayer" parent="PlayerSoundBank"]

[node name="PanicAtTheShitshow" type="AudioStreamPlayer" parent="PlayerSoundBank"]
stream = ExtResource( 12 )
bus = "Music"

[node name="NewPlayer" type="KinematicBody" parent="." groups=["player"]]
script = ExtResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="NewPlayer"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Vision" type="Spatial" parent="NewPlayer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.708863, 0 )

[node name="Camera" type="Camera" parent="NewPlayer/Vision"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0 )
cull_mask = 1048573
environment = ExtResource( 3 )
current = true
far = 400.0

[node name="OmniLight" type="DirectionalLight" parent="NewPlayer/Vision/Camera"]
transform = Transform( 1, 0, 0, 0, 0.799129, 0.60116, 0, -0.60116, 0.799129, 0, 4.7654, 0 )
light_color = Color( 0.815686, 0.607843, 0.811765, 1 )
light_energy = 2.0

[node name="Timer" type="Timer" parent="."]
autostart = true
script = ExtResource( 14 )

[node name="Eggsman" type="KinematicBody" parent="." groups=["EggsmanFinal"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.432, 0 )
script = ExtResource( 16 )

[node name="CollisionShape" type="CollisionShape" parent="Eggsman"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Eggsman"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.268475, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="OofSound" type="AudioStreamPlayer3D" parent="Eggsman"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.405687, 0 )
stream = ExtResource( 17 )
unit_size = 10.0

[node name="Timer" type="Timer" parent="Eggsman"]
autostart = true

[node name="The Orb" type="MeshInstance" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="BlocksOuter" type="Spatial" parent="."]
visible = false

[node name="Blocks" type="Spatial" parent="BlocksOuter"]

[node name="StaticBody" type="StaticBody" parent="BlocksOuter/Blocks"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -41.1787, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks/StaticBody"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks/StaticBody"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody2" type="StaticBody" parent="BlocksOuter/Blocks"]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 30.9901, -28.2307, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks/StaticBody2"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks/StaticBody2"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody3" type="StaticBody" parent="BlocksOuter/Blocks"]
transform = Transform( 0, -1, 0, 1, 0, 0, 0, 0, 1, 41.8154, 0.212278, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks/StaticBody3"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks/StaticBody3"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody4" type="StaticBody" parent="BlocksOuter/Blocks"]
transform = Transform( -0.707107, -0.707107, 0, 0.707107, -0.707107, 0, 0, 0, 1, 29.3118, 26.0642, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks/StaticBody4"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks/StaticBody4"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody5" type="StaticBody" parent="BlocksOuter/Blocks"]
transform = Transform( -1, 0, 0, 0, -1, 0, 0, 0, 1, -1.75713, 38.8219, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks/StaticBody5"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks/StaticBody5"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody6" type="StaticBody" parent="BlocksOuter/Blocks"]
transform = Transform( -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 0, 0, 1, -29.524, 26.3643, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks/StaticBody6"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks/StaticBody6"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody8" type="StaticBody" parent="BlocksOuter/Blocks"]
transform = Transform( 4.37114e-08, 1, 0, -1, 4.37114e-08, 0, 0, 0, 1, -42.1449, 6.16976, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks/StaticBody8"]
transform = Transform( 1, 7.10543e-15, 0, -7.10543e-15, 1, 0, 0, 0, 1, 5.73105, 0, 0 )
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks/StaticBody8"]
transform = Transform( 1, 3.55271e-15, 0, -3.55271e-15, 1, 0, 0, 0, 1, 5.94331, -0.212265, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody9" type="StaticBody" parent="BlocksOuter/Blocks"]
transform = Transform( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -29.6873, -21.5971, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks/StaticBody9"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks/StaticBody9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.05247, -4.05247, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="Blocks2" type="Spatial" parent="BlocksOuter"]
transform = Transform( 0.665491, 0, -0.746406, 0, 1, 0, 0.746406, 0, 0.665491, 0, 0, 0 )

[node name="StaticBody" type="StaticBody" parent="BlocksOuter/Blocks2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -41.1787, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks2/StaticBody"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks2/StaticBody"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody2" type="StaticBody" parent="BlocksOuter/Blocks2"]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 30.9901, -28.2307, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks2/StaticBody2"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks2/StaticBody2"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody3" type="StaticBody" parent="BlocksOuter/Blocks2"]
transform = Transform( 0, -1, 0, 1, 0, 0, 0, 0, 1, 41.8154, 0.212278, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks2/StaticBody3"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks2/StaticBody3"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody4" type="StaticBody" parent="BlocksOuter/Blocks2"]
transform = Transform( -0.707107, -0.707107, 0, 0.707107, -0.707107, 0, 0, 0, 1, 29.3118, 26.0642, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks2/StaticBody4"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks2/StaticBody4"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody5" type="StaticBody" parent="BlocksOuter/Blocks2"]
transform = Transform( -1, 0, 0, 0, -1, 0, 0, 0, 1, -1.75713, 38.8219, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks2/StaticBody5"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks2/StaticBody5"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody6" type="StaticBody" parent="BlocksOuter/Blocks2"]
transform = Transform( -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 0, 0, 1, -29.524, 26.3643, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks2/StaticBody6"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks2/StaticBody6"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody8" type="StaticBody" parent="BlocksOuter/Blocks2"]
transform = Transform( 4.37114e-08, 1, 0, -1, 4.37114e-08, 0, 0, 0, 1, -42.1449, 6.16976, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks2/StaticBody8"]
transform = Transform( 1, 7.10543e-15, 0, -7.10543e-15, 1, 0, 0, 0, 1, 5.73105, 0, 0 )
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks2/StaticBody8"]
transform = Transform( 1, 3.55271e-15, 0, -3.55271e-15, 1, 0, 0, 0, 1, 5.94331, -0.212265, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody9" type="StaticBody" parent="BlocksOuter/Blocks2"]
transform = Transform( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -29.6873, -21.5971, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks2/StaticBody9"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks2/StaticBody9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.05247, -4.05247, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="Blocks3" type="Spatial" parent="BlocksOuter"]
transform = Transform( 0.0164402, 0, -0.999865, 0, 1, 0, 0.999865, 0, 0.0164402, 0, 0, 0 )

[node name="StaticBody" type="StaticBody" parent="BlocksOuter/Blocks3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -41.1787, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks3/StaticBody"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks3/StaticBody"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody2" type="StaticBody" parent="BlocksOuter/Blocks3"]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 30.9901, -28.2307, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks3/StaticBody2"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks3/StaticBody2"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody3" type="StaticBody" parent="BlocksOuter/Blocks3"]
transform = Transform( 0, -1, 0, 1, 0, 0, 0, 0, 1, 41.8154, 0.212278, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks3/StaticBody3"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks3/StaticBody3"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody4" type="StaticBody" parent="BlocksOuter/Blocks3"]
transform = Transform( -0.707107, -0.707107, 0, 0.707107, -0.707107, 0, 0, 0, 1, 29.3118, 26.0642, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks3/StaticBody4"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks3/StaticBody4"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody5" type="StaticBody" parent="BlocksOuter/Blocks3"]
transform = Transform( -1, 0, 0, 0, -1, 0, 0, 0, 1, -1.75713, 38.8219, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks3/StaticBody5"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks3/StaticBody5"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody6" type="StaticBody" parent="BlocksOuter/Blocks3"]
transform = Transform( -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 0, 0, 1, -29.524, 26.3643, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks3/StaticBody6"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks3/StaticBody6"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody8" type="StaticBody" parent="BlocksOuter/Blocks3"]
transform = Transform( 4.37114e-08, 1, 0, -1, 4.37114e-08, 0, 0, 0, 1, -42.1449, 6.16976, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks3/StaticBody8"]
transform = Transform( 1, 7.10543e-15, 0, -7.10543e-15, 1, 0, 0, 0, 1, 5.73105, 0, 0 )
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks3/StaticBody8"]
transform = Transform( 1, 3.55271e-15, 0, -3.55271e-15, 1, 0, 0, 0, 1, 5.94331, -0.212265, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody9" type="StaticBody" parent="BlocksOuter/Blocks3"]
transform = Transform( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -29.6873, -21.5971, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks3/StaticBody9"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks3/StaticBody9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.05247, -4.05247, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="Blocks4" type="Spatial" parent="BlocksOuter"]
transform = Transform( -0.703668, 0, -0.710529, 0, 1, 0, 0.710529, 0, -0.703668, 0, 0, 0 )

[node name="StaticBody" type="StaticBody" parent="BlocksOuter/Blocks4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -41.1787, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks4/StaticBody"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks4/StaticBody"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody2" type="StaticBody" parent="BlocksOuter/Blocks4"]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 30.9901, -28.2307, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks4/StaticBody2"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks4/StaticBody2"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody3" type="StaticBody" parent="BlocksOuter/Blocks4"]
transform = Transform( 0, -1, 0, 1, 0, 0, 0, 0, 1, 41.8154, 0.212278, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks4/StaticBody3"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks4/StaticBody3"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody4" type="StaticBody" parent="BlocksOuter/Blocks4"]
transform = Transform( -0.707107, -0.707107, 0, 0.707107, -0.707107, 0, 0, 0, 1, 29.3118, 26.0642, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks4/StaticBody4"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks4/StaticBody4"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody5" type="StaticBody" parent="BlocksOuter/Blocks4"]
transform = Transform( -1, 0, 0, 0, -1, 0, 0, 0, 1, -1.75713, 38.8219, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks4/StaticBody5"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks4/StaticBody5"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody6" type="StaticBody" parent="BlocksOuter/Blocks4"]
transform = Transform( -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 0, 0, 1, -29.524, 26.3643, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks4/StaticBody6"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks4/StaticBody6"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody8" type="StaticBody" parent="BlocksOuter/Blocks4"]
transform = Transform( 4.37114e-08, 1, 0, -1, 4.37114e-08, 0, 0, 0, 1, -42.1449, 6.16976, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks4/StaticBody8"]
transform = Transform( 1, 7.10543e-15, 0, -7.10543e-15, 1, 0, 0, 0, 1, 5.73105, 0, 0 )
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks4/StaticBody8"]
transform = Transform( 1, 3.55271e-15, 0, -3.55271e-15, 1, 0, 0, 0, 1, 5.94331, -0.212265, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="StaticBody9" type="StaticBody" parent="BlocksOuter/Blocks4"]
transform = Transform( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -29.6873, -21.5971, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BlocksOuter/Blocks4/StaticBody9"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="BlocksOuter/Blocks4/StaticBody9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.05247, -4.05247, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
autoplay = true

[node name="RingMover" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -46.558, 0 )
script = ExtResource( 19 )

[node name="WinEnd" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="WinEnd"]
modulate = Color( 0.235294, 0.196078, 0.262745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="WinEnd"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -858.0
margin_top = -519.0
margin_right = 858.0
margin_bottom = 519.0
theme = ExtResource( 20 )
bbcode_enabled = true
bbcode_text = "The damage caused by [color=#FF00FF]Doctor roboton[/color] cannot be overstated, and cannot be undone. but now that you have defeated him once and for all, the people of your home planet have hope for a better future.
As you ride off in an escape pod, you look back at [color=#FF00FF]M0B1[/color], sad for the opportunities you never got to experience there... for the countless opportunities and lives cut short by [color=#FF00FF]doctor roboton[/color]. This is not a happy ending, but it is the happiest one possible.

[center][color=#AAFFAA]Congratulation! You wonned![/color][/center]"
text = "The damage caused by Doctor roboton cannot be overstated, and cannot be undone. but now that you have defeated him once and for all, the people of your home planet have hope for a better future.
As you ride off in an escape pod, you look back at M0B1, sad for the opportunities you never got to experience there... for the countless opportunities and lives cut short by doctor roboton. This is not a happy ending, but it is the happiest one possible.

Congratulation! You wonned!"
scroll_active = false

[node name="PlaytimeLabel" type="Label" parent="WinEnd"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -646.0
margin_top = -80.0
margin_bottom = 6.0
theme = ExtResource( 20 )
text = "Your Playtime: XX:XX:XX"
align = 2

[node name="LoseEnd" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LoseEnd"]
modulate = Color( 0.0666667, 0.0392157, 0.0392157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 21 )
expand = true

[node name="Label" type="Label" parent="LoseEnd"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.5
margin_top = -143.0
margin_right = 66.5
margin_bottom = -57.0
theme = ExtResource( 20 )
text = "OOps."

[node name="TryAgain" type="Button" parent="LoseEnd"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -35.0
margin_right = 110.0
margin_bottom = 35.0
rect_min_size = Vector2( 220, 70 )
theme = ExtResource( 22 )
text = "Try Again"

[node name="MainMenu" type="Button" parent="LoseEnd"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = 65.0
margin_right = 110.0
margin_bottom = 135.0
rect_min_size = Vector2( 220, 70 )
theme = ExtResource( 22 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="NewPlayer" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Eggsman" method="_on_Timer_timeout"]
[connection signal="timeout" from="Eggsman/Timer" to="Eggsman" method="_on_Timer_timeout"]
[connection signal="pressed" from="LoseEnd/TryAgain" to="NewPlayer" method="_on_TryAgain_pressed"]
[connection signal="pressed" from="LoseEnd/MainMenu" to="NewPlayer" method="_on_MainMenu_pressed"]
